<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('user_profiles', function (Blueprint $table) {
            $table->ulid('id')->primary();
            $table->string("student_id_number")->nullable();
            $table->string('whatsapp')->nullable();
            $table->string('line')->nullable();
            $table->string('instagram')->nullable();
            $table->string('institution')->nullable();
            $table->unsignedTinyInteger('gender')->nullable();
            $table->ulid('user_id')->nullable()->constrained()->cascadeOnDelete();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('user_profiles');
    }
};
