<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('faqs', function (Blueprint $table) {
            $table->ulid('id')->primary();
            $table->string('question')->unique();
            $table->text('answer');
            $table->boolean('is_highlighted')->default(false);
            $table->foreignUlid('created_by')->nullable()->references('id')->on('users')->constraint()->nullOnDelete();
            $table->foreignUlid('festival_id')->constraint()->cascadeOnDelete();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('faqs');
    }
};
